# RouterWise-API-Predictive-Analytics-for-Shipments

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  Makefile  README.md  Taskfile.yaml  docker-compose.yml  main.py  mypy.ini  prometheus.yaml  pyproject.toml  requirements.txt  runner.py
api/: config.py  events.py  model_loader.py  monitor.py  predictor.py  routes.py  schema.py  secure.py
api/router/: routes.py
api/schema/: schema.py
api/services/: predictor.py
architecture/: architecture.py
notebooks/: features_selected.py
output_api/data_validation/: example_1  example_2  example_3  example_4  example_5
output_api/prediction_output/: example_4  metric
prometheus/: prometheus.yml
statics/pyan3/: graph.dot  main.dot  mmain_file.dot  monitoring.dot
tests/: schemas_test.py  test_api.py
trainer/: config.py  data_loader.py  monitoring.py  predEvalSave.py  preprocessing.py  training.py
trainer/loader/: data_loader.py
trainer/monitors/: monitoring.py
