[tool.poetry]
name = "mon-super-projet"
version = "0.1.0"
description = "Projet ML production-ready"
authors = ["Abdias Arsène <toi@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
scikit-learn = "^1.4"
catboost = "^1.2"
mlflow = "^2.12"

[tool.poetry.dev-dependencies]
pytest = "^8.1"
pre-commit = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
